[package]
name = "prtsc"
version = "0.1.0"
authors = ["Joakim Malmberg <ostjocke@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a tool to take screenshot share them easily"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
