[package]
name = "prtsc"
version = "0.1.0"
authors = ["Joakim Malmberg <ostjocke@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a tool to take screenshot share them easily"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

[target.x86_64-unknown-linux-gnu.dependencies.xlib]
git = "https://github.com/servo/rust-xlib"
[target.i686-unknown-linux-gnu.dependencies.xlib]
git = "https://github.com/servo/rust-xlib"

[target.'cfg(windows)'.dependencies.winapi]
version = "*"
features = ["windef", "ntdef", "minwindef", "wingdi", "winuser"]